[package]
name = "TCP"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.15", features = ["rt-multi-thread", "time", "fs", "macros", "net", "parking_lot", "io-util"]}
rustyline = "9"